<resources>
    <string name="app_name">놀러온 학교!</string>
    <!--공통-->
    <string name="img_app_logo">logo image</string>
    <string name="ic_back">back icon</string>

    <!--메뉴-->
    <string name="frag_ar">camera</string>
    <string name="frag_map">map</string>
    <string name="frag_notification">notification</string>
    <string name="frag_temp">temp</string>

    <!--에러처리-->
    <string name="default_fail">네트워크연결이 원활하지 않습니다</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="login_id_hint">아이디(이메일)</string>
    <string name="login_email_hint">직접입력</string>
    <string name="login_email_delimiter">\@</string>
    <string name="login_name_hint">이름</string>
    <string name="login_signup">회원가입</string>

    <!-- 프로필 -->
    <string name="myprofile">마이프로필</string>

    <!--fragment tag-->
    <string name="fragment_home">홈</string>
    <string name="fragment_board">미션</string>
    <string name="fragment_challenge">챌린지</string>
    <string name="fragment_chart">후보</string>
    <string name="fragment_profile">ProfileFragment</string>
    <string name="popular_challenge">인기 챌린지</string>
</resources>